Clean up index.html

--- a/index.html
+++ b/index.html
@@ -80,12 +80,10 @@
 
             <div class="col-footer">
               <p>If you are interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
-
               <p>Phone &#45;&#62; &#43;1 (111) 555-1234</p>
-              <p>Email &#45;&#62;  <a href="mailto:watcanz@gmail.com">Watcanz&#64;gmail.com</a></p>
-              
-            </div> <!-- end col div --> 
-        </div>
+              <p>Email &#45;&#62;  <a href="mailto:watcanz@gmail.com">watcanz&#64;gmail.com</a></p>
+            </div> <!-- end col-footer div --> 
+        </div> <!-- End footer-container div -->
         <hr>
         <div class="footer-name">Jeffery Watkins</div>
         <div class="footer-top-link"><a href="#top">Back to Top</a></div>
