--- a/bullterrier.html
+++ b/bullterrier.html
@@ -87,6 +87,17 @@
         <hr>
         <div class="footer-name">Jeffery Watkins</div>
         <div class="footer-top-link"><a href="#top">Back to Top</a></div>
+
+        <nav class="main-header foothide">
+        <div class="container clearfix foot">
+          <h3 id="name-foot">Jeffery Watkins</h3>
+            <ul class="main-nav foot">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="bullterrier.html">Bull Terrier</a></li>
+              <li><a href="about.html">About Me</a></li>
+            </ul>
+        </div> <!-- End Container Div -->
+      </nav> <!-- End Nav Div -->
       </footer>
 
     </div> <!--end wrapper div -->
